--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{*.json,*.xml,*.proto,*.csproj,*yaml,*yml}]
+[{*.json,*.xml,*xsd,*.proto,*.csproj,*yaml,*yml}]
 indent_size = 2
 
 [*.md]
