--- a/src/DemoComp.DemoGrpcClient/DemoComp.DemoGrpcClient.csproj
+++ b/src/DemoComp.DemoGrpcClient/DemoComp.DemoGrpcClient.csproj
@@ -18,11 +18,48 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Polly" Version="8.3.1" />
     <PackageReference Include="Serilog" Version="4.0.0-dev-02122" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.2-dev-00336" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="2.0.1-dev-00969" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.1-dev-00582" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.1.0-dev-00943" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    <PackageReference Include="ToString.Fody" Version="1.11.1" PrivateAssets="All"/>
   </ItemGroup>
 
+
   <ItemGroup>
-    <Protobuf Include="..\..\proto\greet.proto" GrpcServices="Client"/>
+    <Content Include="..\..\proto\serveces\Greeter.proto">
+      <Link>proto\serveces\Greeter.proto</Link>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Protobuf Include="..\..\proto\messages\HelloReply.proto">
+      <GrpcServices>Client</GrpcServices>
+      <Access>Public</Access>
+      <ProtoCompile>True</ProtoCompile>
+      <CompileOutputs>True</CompileOutputs>
+      <OutputDir>obj/Debug/net8.0/</OutputDir>
+      <Generator>MSBuild:Compile</Generator>
+      <Link>proto\messages\HelloReply.proto</Link>
+    </Protobuf>
+    <Protobuf Include="..\..\proto\messages\HelloReply.proto">
+      <GrpcServices>Client</GrpcServices>
+      <Access>Public</Access>
+      <ProtoCompile>True</ProtoCompile>
+      <CompileOutputs>True</CompileOutputs>
+      <OutputDir>obj/Debug/net8.0/</OutputDir>
+      <Generator>MSBuild:Compile</Generator>
+      <Link>proto\messages\HelloReply.proto</Link>
+    </Protobuf>
+    <Protobuf Include="..\..\proto\messages\HelloRequest.proto">
+      <GrpcServices>Client</GrpcServices>
+      <Access>Public</Access>
+      <ProtoCompile>True</ProtoCompile>
+      <CompileOutputs>True</CompileOutputs>
+      <OutputDir>obj\Debug/net8.0/</OutputDir>
+      <Generator>MSBuild:Compile</Generator>
+      <Link>proto\messages\HelloRequest.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
   <ItemGroup>
