--- a/src/DemoComp.DemoGrpcClient/appsettings.Production.json
+++ b/src/DemoComp.DemoGrpcClient/appsettings.Production.json
@@ -1,10 +1,10 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug"
+      "Default": "Information"
     },
     "Properties": {
-      "DOTNET_ENVIRONMENT": "Development"
+      "DOTNET_ENVIRONMENT": "Production"
     }
   }
 }
