--- a/src/DemoComp.DemoGrpcClient/appsettings.json
+++ b/src/DemoComp.DemoGrpcClient/appsettings.json
@@ -1,6 +1,8 @@
 {
   "Serilog": {
-    "Using": ["Serilog.Sinks.Console"],
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -16,11 +18,23 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
     "Properties": {
-      "ApplicationName": "Demo gRPC Client",
-      "Environment": "Production"
+      "ApplicationName": "Demo gRPC Client"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  },
+  "DEMO_GRPC_API_SCHEME": "https",
+  "DEMO_GRPC_API_HOST": "localhost",
+  "DEMO_GRPC_API_PORT": "7054"
 }
