--- a/tests/DemoComp.DemoGrpcClient.Test/DemoComp.DemoGrpcClient.Test.csproj
+++ b/tests/DemoComp.DemoGrpcClient.Test/DemoComp.DemoGrpcClient.Test.csproj
@@ -11,10 +11,11 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0"/>
-    <PackageReference Include="FluentAssertions" Version="7.0.0-alpha.3" />
-    <PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
+    <PackageReference Include="FluentAssertions" Version="7.0.0-alpha.3"/>
+    <PackageReference Include="FluentAssertions.Json" Version="6.1.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.3"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+    <PackageReference Include="Serilog.Sinks.XUnit" Version="3.0.5"/>
     <PackageReference Include="xunit" Version="2.5.3"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
   </ItemGroup>
@@ -30,7 +31,7 @@
   <ItemGroup>
     <Folder Include="TestData\**"/>
   </ItemGroup>
-  
+
   <ItemGroup>
     <Content Include="TestData\**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
